Fix Bar brand alignment (#3085)

--- a/Source/Blazorise/Styles/_bar.scss
+++ b/Source/Blazorise/Styles/_bar.scss
@@ -504,6 +504,8 @@
     }
 }
 
+
+
 .b-bar-vertical-inline:not([data-collapse]) {
     overflow-y: auto;
     overflow-x: hidden;
@@ -522,6 +524,13 @@
                     padding: .5rem .5rem .5rem 3rem;
                 }
             }
+        }
+    }
+
+    .b-bar-brand {
+        .b-bar-link {
+            display: flex;
+            align-items: center;
         }
     }
 }
